ev_site_macros/tests/fail/lesser_than_parent.rs
use ev_site_macros::tiered;

fn main() {
	tiered! {
		Block {
			tier: P2,
			Child { tier: P0 }
		}
	};
}
