ev_site_macros/tests/fail/lesser_than_parent.stderr
error: tier P0 must be strictly greater than enclosing tier P2
 --> tests/fail/lesser_than_parent.rs:7:18
  |
7 |             Child { tier: P0 }
  |                           ^^
  |
  = note: -Ztrack-diagnostics: created at /rustc-dev/8b03437a8ffc8f8b01e62ef5fce82a37ada09b12/compiler/rustc_builtin_macros/src/compile_error.rs:22:25
